<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>by.moiseenko</groupId>
  <artifactId>LearningLambdasAndStreams</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Learning Lambdas And Streams</name>
  <description>How I Taught Lambdas and Streams</description>
  <url>https://github.com/SMoiseenko</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <mcp.version>3.8.1</mcp.version>
    <msp.version>3.0.0-M4</msp.version>
    <junit.version>5.6.0</junit.version>
    <log4j.version>2.13.0</log4j.version>
    <java.version>13</java.version>

    <!--
    <jackson.version>2.10.0</jackson.version>
    -->
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${mcp.version}</version>
        <configuration>
          <release>${java.version}</release>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${msp.version}</version>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>

    </plugins>
  </build>


</project>
